[package]
name = "mayrist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imap = "2.4.1"
mail-parser = "0.8.0"
native-tls = "0.2.11"
regex = "1.7.0"
toml = "0.5.10"
serde = "1.0.152"
serde_derive = "1.0.152"
